# NSCLDAQ

./: .gitignore  .gitmodules  11.1-conversion.files  CHANGELOG  CParamMapCommand.cpp  CParamMapCommand.h  CRateEventProcessor.cpp  CRateEventProcessor.h  CStackUnpacker.cpp  CTheApplication.cpp  CV1x90Unpacker.cpp  CV1x90Unpacker.h  ChangeLog  Makefile  Makefile.am  MySpecTclApp.cpp  README.md  autogen.sh  configFile.tcl  configure.ac  configure.in  extract_release_note.sh  introduction.xml  nscldaq.in  release_notes  spectclSetup.tcl  tcl++incorp.sh  testBuildTarball
clients/CAENV1495Loader/: Makefile.am  V1495Upgrade.c  console.c  console.h
clients/ScalerDisplay/: Makefile.am  ScalerDisplay.tcl  logchannels.tcl  logstripchart.tcl  scaler.tcl  scalerdisplay.1
clients/contrib/N568Panel/: Makefile.am  shaper16.ui.tcl
clients/spectrodaqStatus/: Makefile.am  makeindex.tcl  spdaqstat.tcl  spdaqwidgets.tcl
daq/actions/: Actions.cpp  Actions.h  Makefile.am  TestActionPackage.cpp  actions.tcl  actions.test
daq/eventbuilder/: CBarrierStatsCommand.cpp  CDeadSourceCommand.cpp  CEVBClientApp.cpp  CEVBClientApp.h  CEVBClientFramework.cpp  CEVBFrameworkApp.cpp  CEVBFrameworkApp.h  CEventOrderClient.cpp  CEventOrderClient.h  CFragReader.cpp  CFragWriter.cpp  CFragmentHandler.cpp  CFragmentHandler.h  CFragmentHandlerCommand.cpp  CInputStatsCommand.cpp  COrdererOutput.cpp  COrdererOutput.h  CResetCommand.cpp  CSourceCommand.cpp  CSourceCommand.h  ConnectionManager.tcl  EVBFramework.h  EVBFramwork.cpp  GUI.tcl  GetOpt.cpp  GetOpt.h  Makefile.am  Makefile.in  OrdererPackage.cpp  api.xml  barriers.tcl  callbackManager.tcl  cbmanagerTests.test  cmanagerCallbacks.test  cmdline.h  connectTest.cpp  connectionList.tcl  endrunmon.tcl  evbRdoCallouts.tcl  evbrdocallouts.test  (+18 more)
daq/eventbuilder/glom/: Makefile.am  glom.ggo  glomMain.cpp
daq/eventbuilder/offlineorderer/: EVBConfigure.tcl  JobProcessor.tcl  Makefile.am  OfflineOrdererUI.tcl  RunProcessor.tcl  RunStatusUI.tcl  jobprocessor.test  offlineorderer.tcl
daq/eventbuilder/ringsource/: CRingSource.cpp  CRingSource.h  Makefile.am  options.ggo  ringTestSource.cpp  ringtestoptions.ggo
daq/eventbuilder/teering/: Makefile.am  teering.cpp
daq/eventbuilder/unglom/: Makefile.am  unglom.cpp
daqclients-8.2/clients/ScalerDisplay/: Makefile.am
daqclients-8.2/clients/serverListener/: Makefile.am  serverListener.cpp
exception/: Makefile.am
main/base/sqlite++/: CSqliteTransaction.cpp  CSqliteTransaction.h  CSqliteWhere.cpp  CSqliteWhere.h  Makefile.am  filtertests.cpp  sqlite++.xml  where.py  where.tcl  where.test  wheretests.py
main/caen-nextgen/: CAENVX2750PhaTrigger.h  Makefile.am  TclConfiguredReadout.cpp  VX2750EventSegment.cpp  VX2750MultiTrigger.h  configtests.cpp  manual.xml
main/caen-nextgen/tclreadout/: Makefile.in
main/ddas/: Makefile.am  config_pixie16api.h.in
main/ddas/booter/: Makefile.am  SystemBooter.cpp  SystemBooter.h  SystemBooterTest.cpp  boot.cpp
main/ddas/configuration/: Asserts.h  Configuration.cpp  Configuration.h  ConfigurationParser.cpp  ConfigurationParser.h  ConfigurationParserTest.cpp  ConfigurationTest.cpp  FirmwareVersionFileParser.cpp  FirmwareVersionFileParser.h  FirmwareVersionFileParserTest.cpp  (+11 more)
main/ddascook/: Makefile.am  ddascook.xml
main/utilities/: Makefile.am
simplesetups/v775/: Makefile.am
simplesetups/vmusb/: Makefile.am  vmusbsetup.xml
spectrodaqStatus/: Makefile.am  spdaqstat.tcl
utilities/: Makefile.am
utilities/Buffer/: BufferPtr.h  ByteBuffer.cpp  ByteBuffer.h  ByteOrder.h  Deserializer.h  Makefile.am  bytebuffertest.cpp  byteordertest.cpp  deserializertest.cpp  translatorptrtest.cpp
utilities/FormattedIO/: BufferIOV8.cpp  BufferIOV8.h  Makefile.am  RingIOV10.cpp  RingIOV10.h  RingIOV11.cpp  RingIOV11.h  TestRunner.cpp  daq10test.cpp  daq11test.cpp  daq8test.cpp
utilities/IO/: CDataSink.cpp  CDataSink.h  CDataSource.cpp  CDataSource.h  CFileDataSink.cpp  CFileDataSink.h  CFileDataSource.cpp  CLoggingDataSink.cpp  CLoggingDataSink.h  CRingDataSink.cpp  CRingDataSource.cpp  CTestSourceSink.cpp  CTestSourceSink.h
utilities/boot/: Programs.py  boot.py
utilities/bufdump/: BufdumpMain.cpp  BufdumpMain.h  Makefile.am
utilities/compatibility/: BufferToRing.cpp  Makefile.am  s800toring.in
utilities/conversion/: C10p0to11p0Mediator.cpp  C10p0to11p0Mediator.h  C10p0to8p0Mediator.cpp  C10p0to8p0Mediator.h  C8p0to10p0Mediator.cpp  C8p0to10p0Mediator.h  CCompositePredicate.cpp  CCompositePredicate.h  CPredicate.h  CProcessCountPredicate.cpp  CProcessCountPredicate.h  CSkipNumberPredicate.cpp  CSkipNumberPredicate.h  CTransform10p0to11p0.cpp  CTransform10p0to11p0.h  CTransform10p0to8p0.cpp  CTransform10p0to8p0.h  CTransform11p0to10p0.cpp  CTransform11p0to10p0.h  CTransform11p0to11p0.cpp  CTransform11p0to11p0.h  CTransform8p0to10p0.cpp  CTransform8p0to10p0.h  CTransformCreator.h  CTransformFactory.cpp  CTransformFactory.h  CTransformMediator.cpp  CTransformMediator.h  CTransformMediator.hpp  Main.cpp  Main.h  Makefile.am  TestRunner.cpp  convert_format.py  ctransformfactorytests.cpp  format_converter_options.ggo
utilities/daqstart/: Makefile.am
utilities/eventlog/: Makefile.am  eventlogMain.cpp  eventlogMain.h  eventlogargs.ggo
utilities/filter/: CBaseMediator.h  CBuffer.cpp  CBuffer.h  CBufferDecoder.cpp  CBufferTranslator.cpp  CBufferTranslator.h  CDataSourceFactory.h  CFakeMediator.h  CFileDataSink.h  CFileDataSource.h  CFilterMain.cpp  CFilterMain.h  CInfiniteMediator.cpp  CInfiniteMediator.h  CMediator.cpp  CMediator.h  COneShotMediator.cpp  COneShotMediator.h  CRingDataSource.cpp  CRingDataSource.h  CTestDecoder.cpp  CTestDecoder.h  CTranslatorPointer.h  Makefile.am  datasinkfactorytests.cpp  filter.xml  filtermaintests.cpp  histotypes.h  infinitemediatortests.cpp
utilities/format/: Makefile.am
utilities/newscaler/: Makefile.am  scalerdisplay_man.xml  scalerdisplay_user.xml  tclring_user.xml
utilities/ringselector/: Makefile.am  RingSelectorMain.cpp
utilities/scalerdisplay/: scaler.tcl
utilities/sclclient/: Makefile.am  sclclientMain.cpp  sclclientMain.h
(+2587 files in other folders)
