SUBDIRS = 				common	\
					daqstart \
					dvdburn \
					sequencer \
					nscldaq-format/Buffer \
          IO \
          nscldaq-format \
					filter \
					conversion \
          ringselector \
					bufdump	\
					sclclient \
					tkbufdump \
          newscaler	\
					varmanager	\
					varmanager/server	\
					varmanager/scripts \
					statemanager		\
					runcontrol		\
					bootmanager	\
					services	\
					vardbEventbuilder   \
					dumpend		\
					expEditor	\
					vardbringbuffer \
					ringbuffer	\
					fileanalyzer	\
					eventlog \
					scalersum


# scalerdisplay - removed in favor of newscaler

