


SUBDIRS = 				common	\
					daqstart \
					dvdburn \
					sequencer \
                                        Buffer \
                                        format \
                                        IO \
					FormattedIO \
					filter \
					conversion \
					ringselector \
					eventlog \
					bufdump	\
					sclclient \
					tkbufdump \
					compatibility \
					newscaler	\
					fileanalyzer	\
					scaledown \
                                        scalerReader \
					scalersum \
				       	reglom \
				       	evtCreator

# scalerdisplay - removed in favor of newscaler
